--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,21 @@
   justify-content: center;
   gap: 20px;
 }
+
+.bar {
+  background-color: teal;
+  width: 100px;
+}
+
+.bar:hover {
+  background-color: teal;
+}
+
+.view-container {
+  display: flex;
+  gap: 10px;
+  height: 100%;
+  background-color: #0b0826;
+  align-items: flex-end;
+  justify-content: center;
+}
